Use `overflow: auto` in styles

--- a/styles.scss
+++ b/styles.scss
@@ -16,7 +16,7 @@
     padding: 10px 10px 0 10px;
     margin-right: 2.5%;
 
-    overflow: scroll;
+    overflow: auto;
 
     &:last-child {
       margin: 0;
